see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Mar-2013 Mark Dexter
 # [#30205] findmanifest should prioritize main folder manifests. Thanks Roberto.

29-Mar-2013 Jean-Marie Simonet
 # [#29709] Imposed translation on menu description. Thanks Marco and Brian.
 # [#29680] JLIB_DATABASE_QUERY_FAILED when upgrading to 3.0.2 (Postgresql: invalid input syntax for integer). Thanks Pierre-Louis Bonicoli.
 # [#30107] Redirect plugin needs to be disabled by default. Thanks Ram Tripathi.

28-Mar-2013 Jean-Marie Simonet
 # [#30415] *Multilanguage 3.1: SIngle article display does not filter correctly author contact per language.
 $ Updating installation file: ckb-IQ.ini
 # [#30388] Routing on the compact list tagged items layout, default tagged items layout and similar tags module. Thanks Mark.
 # [#30410] Notice: Array to string conversion in Tags View. Thanks Mark
 # [#30414] Pagination limit not changeable in com_redirect. Thanks Constantin
 # [#30406] Set state to unpublished when save2copy.

27-Mar-2013 Mark Dexter
 # [#30405] Warning in compact tag view when images is empty.

27-Mar-2013 Jean-Marie Simonet
 # [#29319] SEF plugin gives wrong canonical url (of category, not from article). Thanks Rouven and Mark
 # [#30380] Joomla 3.1 should *not* suggest to use "admin" as the default admin username. Thanks Phil
 # [#30384] *TAGS: "Compact List of Tagged items" menu item issues in multilanguage
 # [#30377] Add a tag filter to the sidebars in content managers. Thanks Elin
 # [#30355] Tagged item list is showing unpublished, trashed and archived items. Thanks Elin.
 # [#30389] List All Tags Not Routing to Single Tag Menu Item + . Thanks Mark.