@@ -17,56 +17,71 @@ defined('_JEXEC') or die;
 abstract class JHtmlModules
 {
 	/**
-	 * @param   int $clientId	The client id
-	 * @param   string $state 	The state of the template
+	 * Builds an array of template options
+	 *
+	 * @param   integer  $clientId  The client id
+	 * @param   string   $state     The state of the template
+	 *
+	 * @return  array
 	 */
-	static public function templates($clientId = 0, $state = '')
+	public static function templates($clientId = 0, $state = '')
 	{
+		$options   = array();
 		$templates = ModulesHelper::getTemplates($clientId, $state);
+
 		foreach ($templates as $template)
 		{
 			$options[]	= JHtml::_('select.option', $template->element, $template->name);
 		}
-		return $options;
-	}
-	/**
-	 */
-	static public function types()
-	{
-		$options = array();
-		$options[] = JHtml::_('select.option', 'user', 'COM_MODULES_OPTION_POSITION_USER_DEFINED');
-		$options[] = JHtml::_('select.option', 'template', 'COM_MODULES_OPTION_POSITION_TEMPLATE_DEFINED');
+
 		return $options;
 	}
 
 	/**
+	 * Builds an array of template type options
+	 *
+	 * @return  array
 	 */
-	static public function templateStates()
+	public static function types()
+	{
+		$options = array();
+		$options[] = JHtml::_('select.option', 'user', 'COM_MODULES_OPTION_POSITION_USER_DEFINED');
+		$options[] = JHtml::_('select.option', 'template', 'COM_MODULES_OPTION_POSITION_TEMPLATE_DEFINED');
+
+		return $options;
+	}
+
+	/**
+	 * Builds an array of template state options
+	 *
+	 * @return  array
+	 */
+	public static function templateStates()
 	{
 		$options = array();
 		$options[] = JHtml::_('select.option', '1', 'JENABLED');
 		$options[] = JHtml::_('select.option', '0', 'JDISABLED');
+
 		return $options;
 	}
 
 	/**
 	 * Returns a published state on a grid
 	 *
-	 * @param   integer       $value			The state value.
-	 * @param   integer       $i				The row index
-	 * @param   boolean       $enabled			An optional setting for access control on the action.
-	 * @param   string        $checkbox			An optional prefix for checkboxes.
+	 * @param   integer  $value     The state value.
+	 * @param   integer  $i         The row index
+	 * @param   boolean  $enabled   An optional setting for access control on the action.
+	 * @param   string   $checkbox  An optional prefix for checkboxes.
 	 *
 	 * @return  string        The Html code
 	 *
-	 * @see JHtmlJGrid::state
-	 *
+	 * @see     JHtmlJGrid::state
 	 * @since   1.7.1
 	 */
 	public static function state($value, $i, $enabled = true, $checkbox = 'cb')
 	{
 		$states	= array(
-			1	=> array(
+			1 => array(
 				'unpublish',
 				'COM_MODULES_EXTENSION_PUBLISHED_ENABLED',
 				'COM_MODULES_HTML_UNPUBLISH_ENABLED',
@@ -75,7 +90,7 @@ abstract class JHtmlModules
 				'publish',
 				'publish'
 			),
-			0	=> array(
+			0 => array(
 				'publish',
 				'COM_MODULES_EXTENSION_UNPUBLISHED_ENABLED',
 				'COM_MODULES_HTML_PUBLISH_ENABLED',
@@ -84,7 +99,7 @@ abstract class JHtmlModules
 				'unpublish',
 				'unpublish'
 			),
-			-1	=> array(
+			-1 => array(
 				'unpublish',
 				'COM_MODULES_EXTENSION_PUBLISHED_DISABLED',
 				'COM_MODULES_HTML_UNPUBLISH_DISABLED',
@@ -93,7 +108,7 @@ abstract class JHtmlModules
 				'warning',
 				'warning'
 			),
-			-2	=> array(
+			-2 => array(
 				'publish',
 				'COM_MODULES_EXTENSION_UNPUBLISHED_DISABLED',
 				'COM_MODULES_HTML_PUBLISH_DISABLED',
